Fix: Contact Form Inputs OverFlow ..

--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -83,4 +83,9 @@
   .contactContainer {
     padding: 20px 0px;
   }
+  /* Input Fields */
+  .formGroup input,
+  .formGroup textarea {
+    width: 95%;
+  }
 }
